--- a/portfolio.html
+++ b/portfolio.html
@@ -149,20 +149,21 @@
     </main>
 
     <footer class="footer">
-        <div class="container footer-container">
-           <a class="logo-footer" href ="index.html"><span class="logo-title-footer">Web</span>Studio</a>
-            <address>
-                <ul class="footer-list">
-                    <li class="adress"><a class="adress" href="https://www.google.com/maps/d/u/0/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li class="footer-item"><a href="mailto:info@example.com" class="link">info@example.com</a></li>
-                    <li class="footer-item"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
-                </ul>   
-            </address>  
-        </div>
-        <div class=" container footer-contact">
-            <p class="footer-contact-text"> Присоединяйтесь</p>
-            <ul class="footer-contact-list">
-                <li class="footer-contact-item"><a href="" class="footer-contact-link">
+        <div class=" container main-footer">
+            <div class="footer-container">
+                    <a class="logo-footer" href ="index.html"><span class="logo-title-footer">Web</span>Studio</a>
+                    <address>
+                        <ul class="footer-list">
+                        <li class="adress"><a class="adress" href="https://www.google.com/maps/d/u/0/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="footer-item"><a href="mailto:info@example.com" class="link">info@example.com</a></li>
+                        <li class="footer-item"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+                        </ul>   
+                    </address>  
+            </div>
+          <div class=" container footer-contact">
+                <p class="footer-contact-text"> Присоединяйтесь</p>
+                <ul class="footer-contact-list">
+                    <li class="footer-contact-item"><a href="" class="footer-contact-link">
                     <svg class="footer-contact-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
@@ -187,6 +188,7 @@
                 </a></li>
             </ul>
         </div>
+    </div>
     </footer>
     
 </body>
