--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li class="feature-item">
                     <div class="feature-icon-bg">
                         <svg class="feature-icon" width="70 height="70>
-                            <use href="/images/icons.svg#clock"></use>
+                            <use href="./images/icons.svg#clock"></use>
                         </svg>
                     </div>
                 <h3 class="feature-title">Пунктуальность</h3>
