--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     </ul>   
                 </address>  
         </div>
-      <div class=" container footer-contact">
+      <div class="footer-contact">
             <p class="footer-contact-text"> Присоединяйтесь</p>
             <ul class="footer-contact-list">
                 <li class="footer-contact-item"><a href="" class="footer-contact-link">
