--- a/portfolio.html
+++ b/portfolio.html
@@ -160,7 +160,7 @@
                         </ul>   
                     </address>  
             </div>
-          <div class=" container footer-contact">
+          <div class="footer-contact">
                 <p class="footer-contact-text"> Присоединяйтесь</p>
                 <ul class="footer-contact-list">
                     <li class="footer-contact-item"><a href="" class="footer-contact-link">
